<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".RegisterActivity2">

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigationReg2"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/formColor"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:menu="@menu/menu_reg2" />-->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="547dp"
        android:layout_margin="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp">

        <Button
            android:id="@+id/btnPrev2"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@+id/imageView3"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Previous"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNext2"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnPrev2"
            android:layout_marginEnd="41dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Next"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtUserName"
            android:layout_toEndOf="@+id/txtUserName"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView12"
            android:layout_toEndOf="@+id/txtUserName"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="52dp"
            app:srcCompat="@drawable/kiakoelogos" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Your Membership Login"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView3"
            android:layout_marginTop="98dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Username"
            android:textColor="@color/rounded"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView3"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="E-mail address "
            android:textColor="@color/rounded"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView3"
            android:layout_marginTop="213dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Password"
            android:textColor="@color/rounded"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            android:layout_centerVertical="true"
            android:fontFamily="@font/source_sans_pro"
            android:text="Confirm Password"
            android:textColor="@color/rounded"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/imageView3"
            android:layout_marginBottom="215dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Password hint"
            android:textColor="@color/rounded"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnPrev2"
            android:layout_centerHorizontal="true"
            android:text="2 / 3"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="203dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/txtUserName"
            android:layout_marginEnd="14dp"
            android:background="@drawable/rounded_field"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_user"
            android:inputType="textPersonName"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="203dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_alignTop="@+id/textView10"
            android:background="@drawable/rounded_field"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="202dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_alignTop="@+id/textView12"
            android:background="@drawable/rounded_field"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_field"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etHintPass"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_alignTop="@+id/textView15"
            android:background="@drawable/rounded_field"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_pass_confirm"
            android:inputType="textPersonName"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cbPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/etUsername"
            android:layout_marginTop="172dp"
            android:checked="false"
            android:fontFamily="@font/source_sans_pro2"
            android:text="Show Password"
            android:textColor="@color/textcolors"
            android:theme="@style/CheckBoxTheme" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>