<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".RegisterActivity">

    <!--<android.support.design.widget.BottomNavigationView-->
    <!--android:id="@+id/navigationReg"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/txtColor"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:menu="@menu/menu_bottom_reg" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="539dp"
        android:layout_margin="6dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/kiakoelogos"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/kiakoelogos" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toEndOf="@+id/textView2"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Personal Details"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Surname "
            android:textColor="@color/textcolors"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="139dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="First Name "
            android:textColor="@color/rounded"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="177dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Gender "
            android:textColor="@color/rounded"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="Date of Birth"
            android:textColor="@color/rounded"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSureName"
            style="@style/field_style"
            android:layout_width="205dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_surname"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textColorLink="@color/txColor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/field_style"
            android:layout_width="207dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/etSureName"
            android:layout_alignTop="@+id/textView3"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_firstname"
            android:inputType="textCapSentences|textPersonName"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spGender"
            style="@style/spinner_style"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSureName"
            android:layout_alignStart="@+id/etSureName"
            android:layout_alignTop="@+id/textView4"
            android:entries="@array/array_gen"
            android:popupBackground="@color/txColor" />

        <EditText
            android:id="@+id/etDateBirth"
            style="@style/field_style"
            android:layout_width="205dp"
            android:layout_height="21dp"
            android:layout_alignLeft="@+id/etSureName"
            android:layout_alignStart="@+id/etSureName"
            android:layout_alignTop="@+id/textView5"
            android:ems="10"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/hint_date"
            android:inputType="text"
            android:textColor="@color/text"
            android:textColorHint="@color/txColor"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgNewUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_above="@+id/textView6"
            android:layout_alignStart="@+id/etSureName"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/border"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/takepic" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="97dp"

            android:layout_toStartOf="@+id/btnNext"
            android:fontFamily="@font/source_sans_pro"
            android:text="Take Picture"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnNext"
            android:layout_centerHorizontal="true"
            android:text="1 / 3"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_alignTop="@+id/textView4"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:text="*"
            android:textColor="@color/star"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnPrev"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Next"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/etSureName"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="Previous"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/source_sans_pro2"
            android:text="Cancel (back to home)"
            android:textColor="@color/textcolors" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>